Kubernetes/service.yml
kind: Service 
apiVersion: v1
metadata: 
  name: product-service-svc
spec:
  selector:
    app: product-service 
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
