Kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: easyshop-frontend
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: order-service-svc
                port:
                  number: 3003
